Updated example notebook

--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -80,7 +80,7 @@
     "    temperature=5.0,\n",
     "    local_catalogs_enabled=True,\n",
     "    local_directory=\"/path/to/local/catalogs\",\n",
-    "    local_df=pd.read_csv(\"/path/to/local_metadata.csv\")\n",
+    "    local_df=\"/path/to/local_metadata.csv\"\n",
     ")"
    ]
   },
@@ -215,7 +215,7 @@
     "    # Local catalogs (optional)\n",
     "    local_catalogs_enabled=True,\n",
     "    local_directory=\"/path/to/local/catalogs\",\n",
-    "    local_df=pd.read_csv(\"/path/to/local_metadata.csv\"),\n",
+    "    local_df=\"/path/to/local_metadata.csv\",\n",
     "    \n",
     "    # Atom filtering (optional)\n",
     "    valid_atoms=['C', 'O', 'H', 'N', 'S'],\n",
