--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -88,9 +88,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 3: Restricting Valid Atoms\n",
+    "## Example 3: Restricting Valid Atoms and Setting Assignment Strictness\n",
     "\n",
-    "Specify which atoms are allowed in the molecular candidates."
+    "Specify which atoms are allowed in the molecular candidates. Also the stricter parameter determines how strict the algorithm is with regards to molecular filtering during the fitting stage. If set to True (which is the default), an additional check will be done to try and filter out false positive assignments. Can set this to True if getting too many false positive assignments and can set it to False if not enough molecules are being assigned."
    ]
   },
   {
@@ -104,7 +104,8 @@
     "    directory_path=\"/path/to/file/directory\",\n",
     "    sigma_threshold=5.0,\n",
     "    temperature=300.0,\n",
-    "    valid_atoms=['C', 'H', 'N', 'O']  # Only molecules with C, H, N, O\n",
+    "    valid_atoms=['C', 'H', 'N', 'O'],  # Only molecules with C, H, N, O\n",
+    "    stricter = True #strictness of assignments, default is True, if not enough molecules assigned, set to False.\n",
     ")"
    ]
   },
@@ -134,7 +135,7 @@
     "    sigma_threshold=5.0,\n",
     "    temperature=300.0,\n",
     "    consider_structure=True,\n",
-    "    starting_molecules=['CCO', 'CO', 'CC(C)=O']  # SMILES strings\n",
+    "    starting_molecules=['CCO', 'CO', 'CC(C)=O'],  # SMILES strings\n",
     ")"
    ]
   },
@@ -160,7 +161,8 @@
     "    directory_path=\"/path/to/file/directory\",\n",
     "    sigma_threshold=5.0,\n",
     "    temperature=300.0,\n",
-    "    manual_add_smiles=True  # Prompt for SMILES input when needed\n",
+    "    manual_add_smiles=True,  # Prompt for SMILES input when needed\n",
+    "    stricter = False #less strict molecule filtering\n",
     ")"
    ]
   },
@@ -228,7 +230,9 @@
     "    manual_add_smiles=False,\n",
     "    \n",
     "    # Force ignore specific molecules (optional)\n",
-    "    force_ignore_molecules=['CH3OCHO vt=0,1']\n",
+    "    force_ignore_molecules=['CH3OCHO vt=0,1'],\n",
+    "\n",
+    "    stricter = True #stricter molecule filtering (optional, default is True)\n",
     ")"
    ]
   },
@@ -254,7 +258,9 @@
     "- **`consider_structure`** (bool): Whether to consider molecular structure. Default: `False`\n",
     "- **`starting_molecules`** (list): List of starting molecules (SMILES strings) to initialize the structural relevance graph. Default: `None`\n",
     "- **`manual_add_smiles`** (bool): Enable interactive prompts to manually input SMILES strings for molecules lacking stored SMILES. Default: `False`\n",
-    "- **`force_ignore_molecules`** (list): Molecule names to force the algorithm to ignore. Default: `[]`"
+    "- **`force_ignore_molecules`** (list): Molecule names to force the algorithm to ignore. Default: `[]`\n",
+    "- **`stricter`** (bool): If `True` has extra strict molecule filtering during the fitting stage in order to minimize false positive assignments. If too few molecules are being assigned, should set to `False`. Default `True`\n",
+    "\n"
    ]
   },
   {
