--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -255,7 +255,7 @@
     "- **`local_directory`** (str): Directory containing local .cat files. Default: `None`\n",
     "- **`local_df`** (str): Path to CSV file with local catalog metadata (columns: name, smiles, iso). Default: `None`\n",
     "- **`valid_atoms`** (list): List of valid atoms for molecules. Default: `['C', 'O', 'H', 'N', 'S']`\n",
-    "- **`consider_structure`** (bool): Whether to consider molecular structure. Default: `False`\n",
+    "- **`consider_structure`** (bool): Whether to consider molecular structure. Useful if you suspect mixture components should be chemically related (i.e. discharge experiments). Default: `False`\n",
     "- **`starting_molecules`** (list): List of starting molecules (SMILES strings) to initialize the structural relevance graph. Default: `None`\n",
     "- **`manual_add_smiles`** (bool): Enable interactive prompts to manually input SMILES strings for molecules lacking stored SMILES. Default: `False`\n",
     "- **`force_ignore_molecules`** (list): Molecule names to force the algorithm to ignore. Default: `[]`\n",
