--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -170,11 +170,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 6: Forcing Molecule Exclusion\n",
+    "## Example 6: Forcing Molecule Exclusion/Inclusion\n",
     "\n",
-    "Exclude specific molecules from consideration (useful for removing false positives).\n",
+    "Exclude specific molecules from consideration (useful for removing false positives). \n",
     "\n",
-    "Molecule names should match those in the CDMS/JPL CSV files or your local catalog directory."
+    "Or force the code to include a certain molecule in the fit to test its presence.\n",
+    "\n",
+    "Molecule names should match those in the CDMS/JPL CSV files or your local catalog directory. Separate the molecule names with commas."
    ]
   },
   {
@@ -188,7 +190,8 @@
     "    directory_path=\"/path/to/file/directory\",\n",
     "    sigma_threshold=5.0,\n",
     "    temperature=300.0,\n",
-    "    force_ignore_molecules=['(CH3)2CO v=0']  # Exclude this molecule. Name must match the cdms and jpl .csv files donwloaded from the Dropbox repository\n",
+    "    force_ignore_molecules=['(CH3)2CO v=0'],  # Exclude this molecule. Name must match the cdms and jpl .csv files donwloaded from the Dropbox repository\n",
+    "    force_include_molecules = ['c-C6H5CN', 'HCOOCH2D']\n",
     ")"
    ]
   },
@@ -229,8 +232,9 @@
     "    # Interactive SMILES input (optional)\n",
     "    manual_add_smiles=False,\n",
     "    \n",
-    "    # Force ignore specific molecules (optional)\n",
+    "    # Force ignore or include specific molecules (optional)\n",
     "    force_ignore_molecules=['CH3OCHO vt=0,1'],\n",
+    "    force_include_molecules=['(CH3)2CO v=0', '34SO2']\n",
     "\n",
     "    stricter = True #stricter molecule filtering (optional, default is True)\n",
     ")"
@@ -258,7 +262,8 @@
     "- **`consider_structure`** (bool): Whether to consider molecular structure. Useful if you suspect mixture components should be chemically related (i.e. discharge experiments). Default: `False`\n",
     "- **`starting_molecules`** (list): List of starting molecules (SMILES strings) to initialize the structural relevance graph. Default: `None`\n",
     "- **`manual_add_smiles`** (bool): Enable interactive prompts to manually input SMILES strings for molecules lacking stored SMILES. Default: `False`\n",
-    "- **`force_ignore_molecules`** (list): Molecule names to force the algorithm to ignore. Default: `[]`\n",
+    "- **`force_ignore_molecules`** (list): Molecule names to force the algorithm to ignore. Name must match the downloaded CDMS and JPL .csv files or local directory of catalogs. Default: `[]`\n",
+    "- **`force_include_molecules`** (list): Molecule names to force the algorithm to include in the fit. Name must match the downloaded CDMS and JPL .csv files or local directory of catalogs. Default: `[]`\n",
     "- **`stricter`** (bool): If `True` has extra strict molecule filtering during the fitting stage in order to minimize false positive assignments. If too few molecules are being assigned, should set to `False`. Default `True`\n",
     "\n"
    ]
